--- a/liquidwar6/doc/gui-doxygen.texi
+++ b/liquidwar6/doc/gui-doxygen.texi
@@ -152,7 +152,7 @@ Used to handle multiple-clicks, this is the timestamp of the last click.
 @deftp {Struct} {lw6gui_input_s}
 
     
-    
+Global input state, contains informations about the keyboard, mouse and joystick. This is the macro object used to exchange data and transmit input information from the rendering thread which gathers it to the logical thread which computes the game state.     
 @end deftp
 
 @defcv {Member} {lw6gui_input_s} {need_sync}
@@ -201,7 +201,7 @@ Used to handle multiple-clicks, this is the timestamp of the last click.
 @deftp {Struct} {lw6gui_joystick_s}
 
     
-    
+Joystick information, contains detailed joystick state. This structure uses a pad-like interface, there's no knowledge of analog interfaces, it transforms everything to a binary "up or down" and "left or right". This interface only knows about 6 buttons, this is done on purpose, the logic behind it is that more than 6 buttons makes the control way too complicated. Actually, most common functions are and should be available through the 4 first (a,b,c,d) buttons. The e and f are here for additionnal not-so-important features.     
 @end deftp
 
 @defcv {Member} {lw6gui_joystick_s} {pad_up}
@@ -210,7 +210,7 @@ Used to handle multiple-clicks, this is the timestamp of the last click.
 @strong{Definition:} @code{lw6gui_button_t lw6gui_joystick_s::pad_up}
 
 
-        
+Joystick up button state.         
         
 @end defcv
 
@@ -220,7 +220,7 @@ Used to handle multiple-clicks, this is the timestamp of the last click.
 @strong{Definition:} @code{lw6gui_button_t lw6gui_joystick_s::pad_down}
 
 
-        
+Joystick down button state.         
         
 @end defcv
 
@@ -230,7 +230,7 @@ Used to handle multiple-clicks, this is the timestamp of the last click.
 @strong{Definition:} @code{lw6gui_button_t lw6gui_joystick_s::pad_left}
 
 
-        
+Joystick left button state.         
         
 @end defcv
 
@@ -240,7 +240,7 @@ Used to handle multiple-clicks, this is the timestamp of the last click.
 @strong{Definition:} @code{lw6gui_button_t lw6gui_joystick_s::pad_right}
 
 
-        
+Joystick right button state.         
         
 @end defcv
 
@@ -250,7 +250,7 @@ Used to handle multiple-clicks, this is the timestamp of the last click.
 @strong{Definition:} @code{lw6gui_button_t lw6gui_joystick_s::button_a}
 
 
-        
+Joystick a button state.         
         
 @end defcv
 
@@ -260,7 +260,7 @@ Used to handle multiple-clicks, this is the timestamp of the last click.
 @strong{Definition:} @code{lw6gui_button_t lw6gui_joystick_s::button_b}
 
 
-        
+Joystick b button state.         
         
 @end defcv
 
@@ -270,7 +270,7 @@ Used to handle multiple-clicks, this is the timestamp of the last click.
 @strong{Definition:} @code{lw6gui_button_t lw6gui_joystick_s::button_c}
 
 
-        
+Joystick c button state.         
         
 @end defcv
 
@@ -280,7 +280,7 @@ Used to handle multiple-clicks, this is the timestamp of the last click.
 @strong{Definition:} @code{lw6gui_button_t lw6gui_joystick_s::button_d}
 
 
-        
+Joystick d button state.         
         
 @end defcv
 
@@ -290,7 +290,7 @@ Used to handle multiple-clicks, this is the timestamp of the last click.
 @strong{Definition:} @code{lw6gui_button_t lw6gui_joystick_s::button_e}
 
 
-        
+Joystick e button state.         
         
 @end defcv
 
@@ -300,7 +300,7 @@ Used to handle multiple-clicks, this is the timestamp of the last click.
 @strong{Definition:} @code{lw6gui_button_t lw6gui_joystick_s::button_f}
 
 
-        
+Joystick f button state.         
         
 @end defcv
 
@@ -527,7 +527,7 @@ A style structure which will override the one from the map, depending on the loc
 @deftp {Struct} {lw6gui_menuitem_s}
 
     
-    
+Menu item object. Basically, a menu is an array of these items, it's up to the gfx backend to render this as accurately as possible. The most important field is probably the label.     
 @end deftp
 
 @defcv {Member} {lw6gui_menuitem_s} {id}
@@ -537,7 +537,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+The id of the object, this is non-zero and unique within one run session, incremented at each object creation.         
 @end defcv
 
 @defcv {Member} {lw6gui_menuitem_s} {label}
@@ -546,7 +546,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{char* lw6gui_menuitem_s::label}
 
 
-        
+What is displayed in the menu item.         
         
 @end defcv
 
@@ -556,7 +556,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{char* lw6gui_menuitem_s::tooltip}
 
 
-        
+An additionnal tooltip explaining what the item is about.         
         
 @end defcv
 
@@ -567,7 +567,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+The value for this item, can typically be used for booleans and integer values, in addition to the information conveyed by the label. One special case is colored items, in that case the value will be used as a color index.         
 @end defcv
 
 @defcv {Member} {lw6gui_menuitem_s} {enabled}
@@ -576,7 +576,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_menuitem_s::enabled}
 
 
-        
+Wether the item is valid and can be used.         
         
 @end defcv
 
@@ -586,7 +586,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_menuitem_s::selected}
 
 
-        
+Wether the item is the current selection.         
         
 @end defcv
 
@@ -597,7 +597,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+Wether to colorize the item, and in that case, use the value field to know which color to use.         
 @end defcv
 
 @defcv {Member} {lw6gui_menuitem_s} {last_change}
@@ -606,7 +606,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_menuitem_s::last_change}
 
 
-        
+Timestamp of last time the menu item was updated and changed.         
         
 @end defcv
 
@@ -616,7 +616,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_menuitem_s::last_select}
 
 
-        
+Timestamp of last time the menu was selected.         
         
 @end defcv
 
@@ -626,7 +626,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_menuitem_s::last_unselect}
 
 
-        
+Timestamp of last time the menu was unselected.         
         
 @end defcv
 
@@ -636,7 +636,7 @@ A style structure which will override the one from the map, depending on the loc
 @deftp {Struct} {lw6gui_menu_s}
 
     
-    
+Menu item object. Basically, a menu is an array of menu items, it's up to the gfx backend to render this as accurately as possible. The most important field is probably the items labels. The menu object also stores state information such as what was the first item displayed lately.     
 @end deftp
 
 @defcv {Member} {lw6gui_menu_s} {id}
@@ -646,7 +646,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+The id of the object, this is non-zero and unique within one run session, incremented at each object creation.         
 @end defcv
 
 @defcv {Member} {lw6gui_menu_s} {title}
@@ -655,7 +655,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{char* lw6gui_menu_s::title}
 
 
-        
+Title of the menu, used for breadcrumbs.         
         
 @end defcv
 
@@ -665,7 +665,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{char* lw6gui_menu_s::help}
 
 
-        
+Additionnal help text, explaining what the menu is about.         
         
 @end defcv
 
@@ -676,7 +676,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+Popup text, will be displayed when the menu is first displayed, and then disappear.         
 @end defcv
 
 @defcv {Member} {lw6gui_menu_s} {nb_items}
@@ -685,7 +685,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_menu_s::nb_items}
 
 
-        
+Number of items.         
         
 @end defcv
 
@@ -695,7 +695,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{lw6gui_menuitem_t* lw6gui_menu_s::esc_item}
 
 
-        
+Special item describing the ESC button.         
         
 @end defcv
 
@@ -705,7 +705,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{lw6gui_menuitem_t** lw6gui_menu_s::items}
 
 
-        
+Array of items, containing all the menu items.         
         
 @end defcv
 
@@ -715,7 +715,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_menu_s::selected_item}
 
 
-        
+The current selection.         
         
 @end defcv
 
@@ -726,7 +726,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+The first item displayed, this is mandatory if we want the menus to be displayable in different states, for instance with first item being 2 and items displayed from 2 to 10 or with first item being 5 and items displayed from 2 to 10. In the first case the 1st item is selected, in the second case it's the 4th.         
 @end defcv
 
 @defcv {Member} {lw6gui_menu_s} {nb_items_displayed}
@@ -735,7 +735,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_menu_s::nb_items_displayed}
 
 
-        
+Number of items displayed.         
         
 @end defcv
 
@@ -746,7 +746,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+Index, display-based (that is, 0 here means first displayed and not necessarly first in the items array), of the selected item.         
 @end defcv
 
 @defcv {Member} {lw6gui_menu_s} {allow_scroll}
@@ -755,7 +755,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_menu_s::allow_scroll}
 
 
-        
+Wether scrolling is allowed.         
         
 @end defcv
 
@@ -766,7 +766,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+List of strings containing the breadcrumbs, that is to say all the menu titles that one must use to get here.         
 @end defcv
 
 
@@ -775,7 +775,7 @@ A style structure which will override the one from the map, depending on the loc
 @deftp {Struct} {lw6gui_mouse_pointer_s}
 
     
-    
+Use to store mouse pointer information.     
 @end deftp
 
 @defcv {Member} {lw6gui_mouse_pointer_s} {pos_x}
@@ -784,7 +784,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_mouse_pointer_s::pos_x}
 
 
-        
+Mouse X position (pixels).         
         
 @end defcv
 
@@ -794,7 +794,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_mouse_pointer_s::pos_y}
 
 
-        
+Mouse Y position (pixels).         
         
 @end defcv
 
@@ -805,7 +805,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+Mouse X speed. The unit is pixels per second. This is based on the last move, for instance if between two moves 100 msec have elapsed, and mouse moved 13 pixels, then speed is 130.         
 @end defcv
 
 @defcv {Member} {lw6gui_mouse_pointer_s} {speed_y}
@@ -815,7 +815,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+Mouse Y speed. The unit is pixels per second. This is based on the last move, for instance if between two moves 100 msec have elapsed, and mouse moved 13 pixels, then speed is 130.         
 @end defcv
 
 
@@ -824,7 +824,7 @@ A style structure which will override the one from the map, depending on the loc
 @deftp {Struct} {lw6gui_mouse_s}
 
     
-    
+Mouse information, contains detailed mouse state, including mouse position and button states but also keeps track of mouse speed as well as its corresponding map coordinates. That is, given the current screen position, what does it mean on the logical map/battlefield.     
 @end deftp
 
 @defcv {Member} {lw6gui_mouse_s} {moved}
@@ -833,7 +833,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_mouse_s::moved}
 
 
-        
+Wether mouse was moved lately. 1 means yes, 0 no.         
         
 @end defcv
 
@@ -843,7 +843,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int64_t lw6gui_mouse_s::last_moved}
 
 
-        
+Timestamp of last move.         
         
 @end defcv
 
@@ -854,7 +854,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+Information about the mouse pointer, using screen coordinates, the unit being pixels.         
 @end defcv
 
 @defcv {Member} {lw6gui_mouse_s} {map_pointer}
@@ -864,7 +864,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+Information about the mouse pointer, using map coordinates, the unit being the map slot. This is possibly very different from screen coordinates, they can be inverted, have a different scale, and globally it's just something else, even if it refers to the same physical move.         
 @end defcv
 
 @defcv {Member} {lw6gui_mouse_s} {screen_drag_start}
@@ -874,7 +874,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+Information about the mouse pointer when drag mode was entered. The unit is screen pixels.         
 @end defcv
 
 @defcv {Member} {lw6gui_mouse_s} {drag_mode}
@@ -883,7 +883,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{lw6gui_drag_mode_t lw6gui_mouse_s::drag_mode}
 
 
-        
+The current drag state.         
         
 @end defcv
 
@@ -894,7 +894,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+The index of the menu item the mouse is on. This is the only was to know when to select an item, one should not use mouse coords outside the gfx renderer code for this purpose, it's the renderer which has knowledge about where menu items are.         
 @end defcv
 
 @defcv {Member} {lw6gui_mouse_s} {menu_scroll}
@@ -904,7 +904,7 @@ A style structure which will override the one from the map, depending on the loc
 
 
         
-        
+Set to -1 if one needs to scroll up (decrease menu index) to +1 if one needs to scroll down (increase menu index) and 0 if one needs to do nothing as far as scrolling is concerned.         
 @end defcv
 
 @defcv {Member} {lw6gui_mouse_s} {menu_esc}
@@ -913,7 +913,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{int lw6gui_mouse_s::menu_esc}
 
 
-        
+Wether mouse pointer is over the ESC button.         
         
 @end defcv
 
@@ -923,7 +923,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{lw6gui_button_t lw6gui_mouse_s::button_left}
 
 
-        
+Mouse left button state.         
         
 @end defcv
 
@@ -933,7 +933,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{lw6gui_button_t lw6gui_mouse_s::button_right}
 
 
-        
+Mouse right button state.         
         
 @end defcv
 
@@ -943,7 +943,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{lw6gui_button_t lw6gui_mouse_s::button_middle}
 
 
-        
+Mouse middle button state.         
         
 @end defcv
 
@@ -953,7 +953,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{lw6gui_button_t lw6gui_mouse_s::wheel_up}
 
 
-        
+Mouse wheel up state.         
         
 @end defcv
 
@@ -963,7 +963,7 @@ A style structure which will override the one from the map, depending on the loc
 @strong{Definition:} @code{lw6gui_button_t lw6gui_mouse_s::wheel_down}
 
 
-        
+Mouse wheel down state.         
         
 @end defcv
 
@@ -1022,7 +1022,7 @@ Right button (boolean).
 @deftp {Struct} {lw6gui_point_s}
 
     
-    
+Basic point type, 3 floating point coords.     
 @end deftp
 
 @defcv {Member} {lw6gui_point_s} {x}
@@ -1031,7 +1031,7 @@ Right button (boolean).
 @strong{Definition:} @code{float lw6gui_point_s::x}
 
 
-        
+X position.         
         
 @end defcv
 
@@ -1041,7 +1041,7 @@ Right button (boolean).
 @strong{Definition:} @code{float lw6gui_point_s::y}
 
 
-        
+Y position.         
         
 @end defcv
 
@@ -1051,7 +1051,7 @@ Right button (boolean).
 @strong{Definition:} @code{float lw6gui_point_s::z}
 
 
-        
+Z position.         
         
 @end defcv
 
@@ -1061,7 +1061,7 @@ Right button (boolean).
 @deftp {Struct} {lw6gui_quad_s}
 
     
-    
+Basic quad type, composed of 4 points (floating point values).     
 @end deftp
 
 @defcv {Member} {lw6gui_quad_s} {p1}
@@ -1070,7 +1070,7 @@ Right button (boolean).
 @strong{Definition:} @code{lw6gui_point_t lw6gui_quad_s::p1}
 
 
-        
+1st point.         
         
 @end defcv
 
@@ -1080,7 +1080,7 @@ Right button (boolean).
 @strong{Definition:} @code{lw6gui_point_t lw6gui_quad_s::p2}
 
 
-        
+2nd point.         
         
 @end defcv
 
@@ -1090,7 +1090,7 @@ Right button (boolean).
 @strong{Definition:} @code{lw6gui_point_t lw6gui_quad_s::p3}
 
 
-        
+3rd point.         
         
 @end defcv
 
@@ -1100,7 +1100,7 @@ Right button (boolean).
 @strong{Definition:} @code{lw6gui_point_t lw6gui_quad_s::p4}
 
 
-        
+4th point.         
         
 @end defcv
 
@@ -1110,7 +1110,7 @@ Right button (boolean).
 @deftp {Struct} {lw6gui_rect_array_s}
 
     
-    
+Array of rectangles. This is typically used to make tiles that overlap. It's mostly used to display fighters/maps using multiple textures when the whole stuff does not fit in one single OpenGL texture and needs to be splitted. Technically, when one needs to split textures, performance is poor, but still better than relying on software renderer only.     
 @end deftp
 
 @defcv {Member} {lw6gui_rect_array_s} {source}
@@ -1119,7 +1119,7 @@ Right button (boolean).
 @strong{Definition:} @code{lw6sys_whd_t lw6gui_rect_array_s::source}
 
 
-        
+Size of original source data.         
         
 @end defcv
 
@@ -1130,7 +1130,7 @@ Right button (boolean).
 
 
         
-        
+Boundary limits of the rect array, this is typically bigger that source size, it starts at negative values and finishes outside the source. It's interesting to cover that big an area to enable both the water effect and proper wrapping/clamping.         
 @end defcv
 
 @defcv {Member} {lw6gui_rect_array_s} {tile_size}
@@ -1140,7 +1140,7 @@ Right button (boolean).
 
 
         
-        
+Width and height of the tiles, this is typically a power of two, as it's designed to match an OpenGL low-level texture object.         
 @end defcv
 
 @defcv {Member} {lw6gui_rect_array_s} {border_size}
@@ -1150,7 +1150,7 @@ Right button (boolean).
 
 
         
-        
+The border size one needs to cut from the tile_size (on both sides, up and down or left and right) to get the real usable size of the tile.         
 @end defcv
 
 @defcv {Member} {lw6gui_rect_array_s} {tile_spacing}
@@ -1160,7 +1160,7 @@ Right button (boolean).
 
 
         
-        
+The tile spacing, difference of X or Y between two tiles, this is typically smaller that tile_size.         
 @end defcv
 
 @defcv {Member} {lw6gui_rect_array_s} {nb_tiles_w}
@@ -1169,7 +1169,7 @@ Right button (boolean).
 @strong{Definition:} @code{int lw6gui_rect_array_s::nb_tiles_w}
 
 
-        
+Number of tiles on the X axis (width).         
         
 @end defcv
 
@@ -1179,7 +1179,7 @@ Right button (boolean).
 @strong{Definition:} @code{int lw6gui_rect_array_s::nb_tiles_h}
 
 
-        
+Number of tiles on the Y axis (height).         
         
 @end defcv
 
@@ -1189,7 +1189,7 @@ Right button (boolean).
 @strong{Definition:} @code{int lw6gui_rect_array_s::nb_tiles}
 
 
-        
+Overall number of tiles.         
         
 @end defcv
 
@@ -1199,7 +1199,7 @@ Right button (boolean).
 @deftp {Struct} {lw6gui_rect_s}
 
     
-    
+A basic rectangle data. The idea is to store both corner positions and width and height to cache the values and avoid always recalculating them. Values are integer based, for a floating point equivalent, see the zone struct.     
 @end deftp
 
 @defcv {Member} {lw6gui_rect_s} {x1}
@@ -1208,7 +1208,7 @@ Right button (boolean).
 @strong{Definition:} @code{int lw6gui_rect_s::x1}
 
 
-        
+Top-left corner X position.         
         
 @end defcv
 
@@ -1218,7 +1218,7 @@ Right button (boolean).
 @strong{Definition:} @code{int lw6gui_rect_s::y1}
 
 
-        
+Top-left corner Y position.         
         
 @end defcv
 
@@ -1228,7 +1228,7 @@ Right button (boolean).
 @strong{Definition:} @code{int lw6gui_rect_s::x2}
 
 
-        
+Bottom-right corner X position.         
         
 @end defcv
 
@@ -1238,7 +1238,7 @@ Right button (boolean).
 @strong{Definition:} @code{int lw6gui_rect_s::y2}
 
 
-        
+Bottom-right corner Y position.         
         
 @end defcv
 
@@ -1248,7 +1248,7 @@ Right button (boolean).
 @strong{Definition:} @code{int lw6gui_rect_s::w}
 
 
-        
+Width.         
         
 @end defcv
 
@@ -1258,7 +1258,7 @@ Right button (boolean).
 @strong{Definition:} @code{int lw6gui_rect_s::h}
 
 
-        
+Height.         
         
 @end defcv
 
@@ -1307,7 +1307,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @deftp {Struct} {lw6gui_segment_s}
 
     
-    
+Basic segment type, composed of 2 points (floating point values).     
 @end deftp
 
 @defcv {Member} {lw6gui_segment_s} {p1}
@@ -1316,7 +1316,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @strong{Definition:} @code{lw6gui_point_t lw6gui_segment_s::p1}
 
 
-        
+1st point.         
         
 @end defcv
 
@@ -1326,7 +1326,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @strong{Definition:} @code{lw6gui_point_t lw6gui_segment_s::p2}
 
 
-        
+2nd point.         
         
 @end defcv
 
@@ -1336,7 +1336,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @deftp {Struct} {lw6gui_smoother_s}
 
     
-    
+Statefull object used to make transitions between 2 floats. Basically, one needs to choose a target, which is y2, and give a start, which is defined by s1 and y1 (speed and y value). Then with t1 (start timestamp) and duration the object has functions which enables interpolation between those two values, knowing at the end the value will be y2 and the speed 0. To some extent, this is a primitive bezier-like tool.     
 @end deftp
 
 @defcv {Member} {lw6gui_smoother_s} {s1}
@@ -1345,7 +1345,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @strong{Definition:} @code{float lw6gui_smoother_s::s1}
 
 
-        
+Speed at startup.         
         
 @end defcv
 
@@ -1355,7 +1355,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @strong{Definition:} @code{float lw6gui_smoother_s::y1}
 
 
-        
+Y value at startup.         
         
 @end defcv
 
@@ -1365,7 +1365,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @strong{Definition:} @code{float lw6gui_smoother_s::y2}
 
 
-        
+Y target value.         
         
 @end defcv
 
@@ -1375,7 +1375,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @strong{Definition:} @code{int64_t lw6gui_smoother_s::t1}
 
 
-        
+Timestamp at startup.         
         
 @end defcv
 
@@ -1385,7 +1385,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @strong{Definition:} @code{int lw6gui_smoother_s::duration}
 
 
-        
+Duration (in milliseconds) of the transition.         
         
 @end defcv
 
@@ -1395,7 +1395,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @deftp {Struct} {lw6gui_triangle_s}
 
     
-    
+Basic triangle type, composed of 3 points (floating point values).     
 @end deftp
 
 @defcv {Member} {lw6gui_triangle_s} {p1}
@@ -1404,7 +1404,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @strong{Definition:} @code{lw6gui_point_t lw6gui_triangle_s::p1}
 
 
-        
+1st point.         
         
 @end defcv
 
@@ -1414,7 +1414,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @strong{Definition:} @code{lw6gui_point_t lw6gui_triangle_s::p2}
 
 
-        
+2nd point.         
         
 @end defcv
 
@@ -1424,7 +1424,7 @@ If pressed twice within this delay (in milliseconds) then a double-click event i
 @strong{Definition:} @code{lw6gui_point_t lw6gui_triangle_s::p3}
 
 
-        
+3rd point.         
         
 @end defcv
 
@@ -1473,7 +1473,7 @@ Height, in pixels.
 @deftp {Struct} {lw6gui_viewport_s}
 
     
-    
+Macro object used to store viewport information. Viewport here means "what part of the map should we display, on which part of the screen, and with which parameters".     
 @end deftp
 
 @defcv {Member} {lw6gui_viewport_s} {map_shape}
@@ -1482,7 +1482,7 @@ Height, in pixels.
 @strong{Definition:} @code{lw6sys_whd_t lw6gui_viewport_s::map_shape}
 
 
-        
+Shape of the map to display, unit is map slot.         
         
 @end defcv
 
@@ -1492,7 +1492,7 @@ Height, in pixels.
 @strong{Definition:} @code{lw6sys_whd_t lw6gui_viewport_s::screen_shape}
 
 
-        
+Shape of the screen, unit is pixels.         
         
 @end defcv
 
@@ -1503,7 +1503,7 @@ Height, in pixels.
 
 
         
-        
+X coord of the point we want to display at the center of the screen. This is typically our main cursor if we're using the keyboard to move it. Unit is map slot.         
 @end defcv
 
 @defcv {Member} {lw6gui_viewport_s} {center_y}
@@ -1513,7 +1513,7 @@ Height, in pixels.
 
 
         
-        
+Y coord of the point we want to display at the center of the screen. This is typically our main cursor if we're using the keyboard to move it. Unit is map slot.         
 @end defcv
 
 @defcv {Member} {lw6gui_viewport_s} {old_center_x}
@@ -1523,7 +1523,7 @@ Height, in pixels.
 
 
         
-        
+Previous X coord of the point we wanted to display at the center of the screen. This is typically our main cursor if we're using the keyboard to move it. Unit is map slot.         
 @end defcv
 
 @defcv {Member} {lw6gui_viewport_s} {old_center_y}
@@ -1533,7 +1533,7 @@ Height, in pixels.
 
 
         
-        
+Previous Y coord of the point we wanted to display at the center of the screen. This is typically our main cursor if we're using the keyboard to move it. Unit is map slot.         
 @end defcv
 
 @defcv {Member} {lw6gui_viewport_s} {speed_x}
@@ -1543,7 +1543,7 @@ Height, in pixels.
 
 
         
-        
+Speed at which the viewport is moving on the X axis, unit is map slot per second.         
 @end defcv
 
 @defcv {Member} {lw6gui_viewport_s} {speed_y}
@@ -1553,7 +1553,7 @@ Height, in pixels.
 
 
         
-        
+Speed at which the viewport is moving on the Y axis, unit is map slot per second.         
 @end defcv
 
 @defcv {Member} {lw6gui_viewport_s} {x_polarity}
@@ -1562,7 +1562,7 @@ Height, in pixels.
 @strong{Definition:} @code{int lw6gui_viewport_s::x_polarity}
 
 
-        
+X-polarity parameter (1=on, 0=off, -1=invert).         
         
 @end defcv
 
@@ -1572,7 +1572,7 @@ Height, in pixels.
 @strong{Definition:} @code{int lw6gui_viewport_s::y_polarity}
 
 
-        
+Y-polarity parameter (1=on, 0=off, -1=invert).         
         
 @end defcv
 
@@ -1582,7 +1582,7 @@ Height, in pixels.
 @strong{Definition:} @code{int lw6gui_viewport_s::x_wrap}
 
 
-        
+Wether to wrap map on the X axis.         
         
 @end defcv
 
@@ -1592,7 +1592,7 @@ Height, in pixels.
 @strong{Definition:} @code{int lw6gui_viewport_s::y_wrap}
 
 
-        
+Wether to wrap map on the Y axis.         
         
 @end defcv
 
@@ -1603,7 +1603,7 @@ Height, in pixels.
 
 
         
-        
+Drawable zone, this is the physical on-screen viewport. Unit is pixels.         
 @end defcv
 
 @defcv {Member} {lw6gui_viewport_s} {map_main}
@@ -1613,7 +1613,7 @@ Height, in pixels.
 
 
         
-        
+Zone corresponding to the map, if it was to be drawn as a whole, regardless of drawable size, wrapping and polarity.         
 @end defcv
 
 @defcv {Member} {lw6gui_viewport_s} {map_main_clipped}
@@ -1623,7 +1623,7 @@ Height, in pixels.
 
 
         
-        
+Zone corresponding to the map, only the main map, ignoring wrapping and polarity, but clipped with drawable zone.         
 @end defcv
 
 @defcv {Member} {lw6gui_viewport_s} {map_visible}
@@ -1633,7 +1633,7 @@ Height, in pixels.
 
 
         
-        
+Actual visible zone of the map, including wrapping, polarity, and drawable clip aware.         
 @end defcv
 
 
@@ -1642,7 +1642,7 @@ Height, in pixels.
 @deftp {Struct} {lw6gui_zone_s}
 
     
-    
+A basic rectangle data. The idea is to store both corner positions and width and height to cache the values and avoid always recalculating them. Values are float based, for an integer point equivalent, see the rect struct.     
 @end deftp
 
 @defcv {Member} {lw6gui_zone_s} {x1}
@@ -1651,7 +1651,7 @@ Height, in pixels.
 @strong{Definition:} @code{float lw6gui_zone_s::x1}
 
 
-        
+Top-left corner X position.         
         
 @end defcv
 
@@ -1661,7 +1661,7 @@ Height, in pixels.
 @strong{Definition:} @code{float lw6gui_zone_s::y1}
 
 
-        
+Top-left corner Y position.         
         
 @end defcv
 
@@ -1671,7 +1671,7 @@ Height, in pixels.
 @strong{Definition:} @code{float lw6gui_zone_s::x2}
 
 
-        
+Bottom-right corner X position.         
         
 @end defcv
 
@@ -1681,7 +1681,7 @@ Height, in pixels.
 @strong{Definition:} @code{float lw6gui_zone_s::y2}
 
 
-        
+Bottom-right corner Y position.         
         
 @end defcv
 
@@ -1691,7 +1691,7 @@ Height, in pixels.
 @strong{Definition:} @code{float lw6gui_zone_s::w}
 
 
-        
+Width.         
         
 @end defcv
 
@@ -1701,7 +1701,7 @@ Height, in pixels.
 @strong{Definition:} @code{float lw6gui_zone_s::h}
 
 
-        
+Height.         
         
 @end defcv
 
