--- a/liquidwar6/doc/pil-doxygen.texi
+++ b/liquidwar6/doc/pil-doxygen.texi
@@ -4,7 +4,7 @@
 @deftp {Struct} {lw6pil_add_args_s}
 
     
-    
+Arguments passed to the ADD command.     
 @end deftp
 
 @defcv {Member} {lw6pil_add_args_s} {cursor_id}
@@ -13,7 +13,7 @@
 @strong{Definition:} @code{u_int16_t lw6pil_add_args_s::cursor_id}
 
 
-        
+Cursor ID (16-bit non-zero unsigned int).         
         
 @end defcv
 
@@ -23,7 +23,7 @@
 @strong{Definition:} @code{int lw6pil_add_args_s::team_color}
 
 
-        
+Team color (0 to 9).         
         
 @end defcv
 
@@ -33,7 +33,7 @@
 @deftp {Struct} {lw6pil_command_s}
 
     
-    
+Command structure, contains both full-text version and parsed information.     
 @end deftp
 
 @defcv {Member} {lw6pil_command_s} {seq}
@@ -43,7 +43,7 @@
 
 
         
-        
+The sequence number, a very large 64-bit integer. The sequence is here because the round wouldn't be able to stand multiple games for long as it is only 32-bit. OTOH making round a 64-bit would cause multithread problems because of non-atomicity of 64-bit affectation on truely 32-bit platforms.         
 @end defcv
 
 @defcv {Member} {lw6pil_command_s} {round}
@@ -52,7 +52,7 @@
 @strong{Definition:} @code{int lw6pil_command_s::round}
 
 
-        
+The game round.         
         
 @end defcv
 
@@ -62,7 +62,7 @@
 @strong{Definition:} @code{u_int64_t lw6pil_command_s::node_id}
 
 
-        
+The node ID issuing that command.         
         
 @end defcv
 
@@ -72,7 +72,7 @@
 @strong{Definition:} @code{lw6pil_command_code_t lw6pil_command_s::code}
 
 
-        
+The command code.         
         
 @end defcv
 
@@ -82,7 +82,7 @@
 @strong{Definition:} @code{lw6pil_command_args_t lw6pil_command_s::args}
 
 
-        
+The command arguments, parsed.         
         
 @end defcv
 
@@ -92,7 +92,7 @@
 @strong{Definition:} @code{char* lw6pil_command_s::text}
 
 
-        
+The original full text of the command.         
         
 @end defcv
 
@@ -102,7 +102,7 @@
 @deftp {Struct} {lw6pil_local_cursors_s}
 
     
-    
+Contains information about all local cursors, which will override information from game state.     
 @end deftp
 
 @defcv {Member} {lw6pil_local_cursors_s} {main_cursor_id}
@@ -112,7 +112,7 @@
 
 
         
-        
+Main cursor ID (16-bit non-zero unsigned int). By main, we usually mean the mouse-driven one but necessarily. But still, this is a cursor which will have a special role, it will be used to center the map if needed, among other things.         
 @end defcv
 
 @defcv {Member} {lw6pil_local_cursors_s} {main_i}
@@ -121,7 +121,7 @@
 @strong{Definition:} @code{int lw6pil_local_cursors_s::main_i}
 
 
-        
+Main cursor index.         
         
 @end defcv
 
@@ -131,7 +131,7 @@
 @strong{Definition:} @code{int lw6pil_local_cursors_s::nb_cursors}
 
 
-        
+Number of cursors.         
         
 @end defcv
 
@@ -141,7 +141,7 @@
 @strong{Definition:} @code{lw6pil_local_cursor_t lw6pil_local_cursors_s::cursors[LW6MAP_MAX_NB_CURSORS]}
 
 
-        
+The cursors array.         
         
 @end defcv
 
@@ -151,7 +151,7 @@
 @deftp {Struct} {lw6pil_local_cursor_s}
 
     
-    
+Stores informations about local cursors. This is usefull for user feedback. Indeed there can be some delay between, for instance, a mouse move or a keyboard press, and the time this information makes it through the whole pipeline. Players wouldn't understand such a lag so for local cursors we override the information from the game state with that information we get right from the GUI.     
 @end deftp
 
 @defcv {Member} {lw6pil_local_cursor_s} {cursor_id}
@@ -160,7 +160,7 @@
 @strong{Definition:} @code{u_int16_t lw6pil_local_cursor_s::cursor_id}
 
 
-        
+Cursor ID (16-bit non-zero unsigned int).         
         
 @end defcv
 
@@ -170,7 +170,7 @@
 @strong{Definition:} @code{int lw6pil_local_cursor_s::x}
 
 
-        
+X position (map coords).         
         
 @end defcv
 
@@ -180,7 +180,7 @@
 @strong{Definition:} @code{int lw6pil_local_cursor_s::y}
 
 
-        
+Y position (map coords).         
         
 @end defcv
 
@@ -191,7 +191,7 @@
 
 
         
-        
+Wether this cursor is mouse controlled. If yes, then information will be taken directly from the mouse driver.         
 @end defcv
 
 @defcv {Member} {lw6pil_local_cursor_s} {is_main}
@@ -200,7 +200,7 @@
 @strong{Definition:} @code{int lw6pil_local_cursor_s::is_main}
 
 
-        
+Wether this cursor is the main cursor.         
         
 @end defcv
 
@@ -229,7 +229,7 @@
 @deftp {Struct} {lw6pil_remove_args_s}
 
     
-    
+Arguments passed to the REMOVE command.     
 @end deftp
 
 @defcv {Member} {lw6pil_remove_args_s} {cursor_id}
@@ -238,7 +238,7 @@
 @strong{Definition:} @code{u_int16_t lw6pil_remove_args_s::cursor_id}
 
 
-        
+Cursor ID (16-bit non-zero unsigned int).         
         
 @end defcv
 
@@ -248,7 +248,7 @@
 @deftp {Struct} {lw6pil_set_args_s}
 
     
-    
+Arguments passed to the SET command.     
 @end deftp
 
 @defcv {Member} {lw6pil_set_args_s} {cursor_id}
@@ -257,7 +257,7 @@
 @strong{Definition:} @code{u_int64_t lw6pil_set_args_s::cursor_id}
 
 
-        
+Cursor ID (16-bit non-zero unsigned int).         
         
 @end defcv
 
@@ -267,7 +267,7 @@
 @strong{Definition:} @code{int lw6pil_set_args_s::x}
 
 
-        
+X position (map coords).         
         
 @end defcv
 
@@ -277,7 +277,7 @@
 @strong{Definition:} @code{int lw6pil_set_args_s::y}
 
 
-        
+Y position (map coords).         
         
 @end defcv
 
@@ -287,7 +287,7 @@
 @strong{Definition:} @code{int lw6pil_set_args_s::fire}
 
 
-        
+Wether to activate primary weapon.         
         
 @end defcv
 
@@ -297,7 +297,7 @@
 @strong{Definition:} @code{int lw6pil_set_args_s::fire2}
 
 
-        
+Wether to activate secondary weapon.         
         
 @end defcv
 
@@ -307,7 +307,7 @@
 @deftp {Struct} {lw6pil_worker_s}
 
     
-    
+Worker thread data, used to calculate stuff in a separate thread. The principle is simple, it tries to keep up with a given target round, whenever this round isn't reached, it computes more and more rounds.     
 @end deftp
 
 @defcv {Member} {lw6pil_worker_s} {run}
@@ -316,7 +316,7 @@
 @strong{Definition:} @code{int lw6pil_worker_s::run}
 
 
-        
+Wether this thread should run, 0 will stop it.         
         
 @end defcv
 
@@ -326,7 +326,7 @@
 @strong{Definition:} @code{int lw6pil_worker_s::current_round}
 
 
-        
+Current game round.         
         
 @end defcv
 
@@ -336,7 +336,7 @@
 @strong{Definition:} @code{int lw6pil_worker_s::target_round}
 
 
-        
+Round up to which we should compute stuff.         
         
 @end defcv
 
@@ -346,7 +346,7 @@
 @strong{Definition:} @code{int lw6pil_worker_s::computed_rounds}
 
 
-        
+How many rounds where computed since object creation.         
         
 @end defcv
 
@@ -356,7 +356,7 @@
 @strong{Definition:} @code{int lw6pil_worker_s::over}
 
 
-        
+Wether the game is over or not.         
         
 @end defcv
 
@@ -366,7 +366,7 @@
 @strong{Definition:} @code{void* lw6pil_worker_s::compute_thread}
 
 
-        
+The thread that does the job.         
         
 @end defcv
 
@@ -376,7 +376,7 @@
 @strong{Definition:} @code{void* lw6pil_worker_s::global_mutex}
 
 
-        
+Global data mutex.         
         
 @end defcv
 
@@ -386,7 +386,7 @@
 @strong{Definition:} @code{void* lw6pil_worker_s::compute_mutex}
 
 
-        
+Mutex used for the computing thread.         
         
 @end defcv
 
@@ -397,7 +397,7 @@
 
 
         
-        
+Mutex used for the commands object, uses a spinlock instead of a standard lock as updating commands is (should) be pretty fast.         
 @end defcv
 
 @defcv {Member} {lw6pil_worker_s} {game_state}
@@ -406,7 +406,7 @@
 @strong{Definition:} @code{lw6ker_game_state_t* lw6pil_worker_s::game_state}
 
 
-        
+Game state the computing thread is working on.         
         
 @end defcv
 
@@ -416,7 +416,7 @@
 @strong{Definition:} @code{lw6sys_list_t* lw6pil_worker_s::commands}
 
 
-        
+List of commands to be processed.         
         
 @end defcv
 
